fixed text overlap

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -98,6 +98,10 @@ min-height: 100vh; /* Ensure the section takes up the full height of the viewpor
   transition: all 0.5s ease;
 }
 
+.col-md-5 img {
+  max-width: 100%; /* Ensure the image doesn't exceed its container */
+  height: auto; /* Maintain the aspect ratio */
+}
 
 #scroll-button.button.clicked {
   color: var(--primary-500);
